Add route back to index

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -20,4 +20,6 @@
         <li><strong>Assemble the lasagna:</strong>Layer the ingredients (starting with sauce and ending with the cheese mix) until the lasagna is assembled</li>
         <li><strong>Bake the lasagna:</strong>Cover with foil and bake in the pregeated oven for about half an hour. Remove the foil and bake until the top is golden brown</li>
     </ol>
+
+    <a href="../index.html">back</a>
 </main>
