Edit file names

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recepies</h1>
-    <a href="recipes/recipename.html">Recipe Title</a>
+    <a href="recipes/lasagna.html">How to make lasagna</a>
 </body>
 </html>
