--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recepies</h1>
-    <a href="recipes/lasagna.html">How to make lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">How to make lasagna</a></li>
+        <li><a href="recipes/mojito.html">How to make a mojito</a> </li>
+    </ul>
 </body>
 </html>
