--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>Odin Recepies</h1>
     <ul>
         <li><a href="recipes/lasagna.html">How to make lasagna</a></li>
-        <li><a href="recipes/mojito.html">How to make a mojito</a> </li>
+        <li><a href="recipes/mojito.html">How to make a mojito</a></li>
+        <li><a href="recipes/hamburgers.html">How to make a hamburger</a></li>
     </ul>
 </body>
 </html>
