--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recepies</h1>
+    <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">How to make lasagna</a></li>
         <li><a href="recipes/mojito.html">How to make a mojito</a></li>
