--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Tim's Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">How to make lasagna</a></li>
-        <li><a href="recipes/mojito.html">How to make a mojito</a></li>
-        <li><a href="recipes/hamburgers.html">How to make a hamburger</a></li>
+        <li><a class="bullet" href="recipes/lasagna.html">How to make lasagna</a></li>
+        <li><a class="bullet" href="recipes/mojito.html">How to make a mojito</a></li>
+        <li><a class="bullet" href="recipes/hamburgers.html">How to make a hamburger</a></li>
     </ul>
 </body>
 </html>
