--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -1,9 +1,10 @@
-<h1>Hamburgers</h1>
+<h1 class="title">Hamburgers</h1>
+<link rel="stylesheet" href="../styles.css">
 <main>
     <img src="../images/pic-hamburger.jpeg" width="400" height="400" alt="Image of lasagna"></a>
-    <h2>Description</h2>
-    <h3>Ingredients:</h3>
-    <ul>
+    <h2 class="main subtitle">Description</h2>
+    <h3 class="subtitle">Ingredients:</h3>
+    <ul class="list">
         <li><strong>Meat:</strong> 2lbs ground beef</li>
         <li><strong>Egg:</strong> 1, beaten</li>
         <li><strong>Bread crumbs:</strong> 3/4 cup</li>
@@ -12,8 +13,8 @@
         <li><strong>Spices and seasonings:</strong> 1/8 tsp cayenne pepper</li>
         <li><strong>Garlic:</strong> 2 cloves, minced</li>
     </ul>
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class="subtitle">Steps:</h3>
+    <ol class="list">
         <li><strong>Grill:</strong> Preheat the grill for high heat</li>
         <li><strong>Prepping the meat:</strong> Mix the ground beef, egg, bread crumbs, evaporated milk, Worcestershire sauce, cayenne pepper, and garlic in a large bowl using your hands. Form the mixture into 8 hamburger patties</li>
         <li><strong>Cooking the meat:</strong> Lightly oil the grill grate. Grill patties until browned and no longer pink, about 5 minutes per side</li>
