--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,9 +1,10 @@
-<h1>Lasagna</h1>
+<h1 class="title">Lasagna</h1>
+<link rel="stylesheet" href="../styles.css">
 <main>
-    <img src="../images/pic-lasagna.jpeg" width="400" height="400" alt="Image of lasagna"></a>
-    <h2>Description</h2>
-    <h3>Ingredients:</h3>
-    <ul>
+    <img class="image" src="../images/pic-lasagna.jpeg" alt="Image of lasagna"></a>
+    <h2 class="main subtitle">Description</h2>
+    <h3 class="subtitle">Ingredients:</h3>
+    <ul class="list">
         <li><strong>Pasta:</strong> Main ingredient for this dish is the lasagna pasta</li>
         <li><strong>Meat:</strong> It is recommended to use half part lean beef and half part pork</li>
         <li><strong>Onion:</strong> A diced onion is cooked until it is translucent</li>
@@ -12,8 +13,8 @@
         <li><strong>Spices and seasonings:</strong> Dried basil, dried oregano, salt and black pepper will liven your dish</li>
         <li><strong>Cheese:</strong> The cheese layer is made up of cottage cheese, Parmesan, and shredded mozzarella</li>
     </ul>
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class="subtitle">Steps:</h3>
+    <ol class="list">
         <li><strong>Cooking the noodles:</strong> Boil the lasagna pasta until it is al dante</li>
         <li><strong>Cooking the meat:</strong> Cook the meat in a skillet until it is brown. Add the onion and continue cooking until it is translucent. Stri in the canned tomato products, half of the parsley, garlic, basil, a pinch of salt, oregano, and sugar.</li>
         <li><strong>Prepping the cheese:</strong> Mix in the cheeses, a pinch of salt, and a pinch of pepper in a separate bowl</li>
