--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -1,17 +1,18 @@
-<h1>Mojito</h1>
+<h1 class="title">Mojito</h1>
+<link rel="stylesheet" href="../styles.css">
 <main>
     <img src="../images/pic-mojito.jpeg" width="400" height="400" alt="Image of lasagna"></a>
-    <h2>Description</h2>
-    <h3>Ingredients:</h3>
-    <ul>
+    <h2 class="main subtitle">Description</h2>
+    <h3 class="subtitle">Ingredients:</h3>
+    <ul class="list">
         <li><strong>Rum:</strong> It is best to use a light rum for this drink</li>
         <li><strong>Mint:</strong> A key component for this drink is fresh mint</li>
         <li><strong>Lime:</strong> Use freshly squeezed limes for best results</li>
         <li><strong>Sugar:</strong> Use simple syrup as it blends well into the drink</li>
         <li><strong>Club Soda:</strong> Top off the drink with club soda for a refreshing drink</li>
     </ul>
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class="subtitle">Steps:</h3>
+    <ol class="list">
         <li><strong>Step 1:</strong> Place mint leaves and a 2 lime wedges into a sturdy glass, then muddle</li>
         <li><strong>Step 2:</strong> Add 2 more lime wedges and 1 ounce of simple syrup, muddle again</li>
         <li><strong>Step 3:</strong> Fill glass with ice</li>
